Emulate world list, add offline mode